Fix overflow bug on background animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 50%;
     height: 100%;
     z-index: 1;
 }
